Fixed card alignment in system admin screen

--- a/portal/src/components/PreEnrollmentUploadCSV/PreEnrollmentUploadCSV.module.css
+++ b/portal/src/components/PreEnrollmentUploadCSV/PreEnrollmentUploadCSV.module.css
@@ -9,6 +9,11 @@
     width: 100%;
 }
 
+.inner-container{
+    width: 100%;
+    display:flex ;
+}
+
 .button {
     border: 2px solid #5C9EF8;
     border-radius: 6px;
