--- a/portal/src/components/TotalRecords/index.module.css
+++ b/portal/src/components/TotalRecords/index.module.css
@@ -2,8 +2,5 @@
     background: #ffffff;
     box-shadow: 0px 6px 20px #C1CFD933;
     border-radius: 10px;
-    display: inline-flex;
-    width: 100%;
     padding: 0.5em 1em;
-    margin-left: 1rem;
 }
