--- a/portal/src/components/UploadHistory/UploadHistory.css
+++ b/portal/src/components/UploadHistory/UploadHistory.css
@@ -1,7 +1,7 @@
 .upload-csv-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2%;
+    grid-gap: 1%;
     margin-top: 4%;
 }
 
@@ -13,7 +13,6 @@
 }
 
 .total {
-    grid-column: 2 / 4;
 }
 
 .upload-history {
